# stl-algos-testing

./: .main.cpp.swn  .main.cpp.swo  .main.cpp.swp  CMakeLists.txt  a.out  sorting.cpp  sorting.cpp~
src/: LinkedList.h  Tests.cpp  main.cpp  sorting.cpp
